--- a/Mango_Car/Mango_Car/Base.lproj/Main.storyboard
+++ b/Mango_Car/Mango_Car/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="63d-Pd-mCI">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="63d-Pd-mCI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="16" y="65" width="343" height="515"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ya-8W-9eL">
-                                <rect key="frame" x="160" y="588" width="54" height="30"/>
+                                <rect key="frame" x="160.5" y="588" width="54" height="30"/>
                                 <state key="normal" title="Mostrar"/>
                                 <connections>
                                     <action selector="mostrarButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="GVU-MX-rlB"/>
@@ -45,6 +45,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="MangoCar" id="Puh-2f-U8F"/>
                     <connections>
+                        <outlet property="mapView" destination="NQG-zn-gSc" id="bcA-tT-WCa"/>
                         <segue destination="hDL-Md-X0F" kind="show" identifier="MostrarSecondID" id="ahW-6q-6i1"/>
                     </connections>
                 </viewController>
