--- a/Mango_Car/Mango_Car/Base.lproj/Main.storyboard
+++ b/Mango_Car/Mango_Car/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="63d-Pd-mCI">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,40 +19,56 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NQG-zn-gSc">
-                                <rect key="frame" x="16" y="65" width="343" height="515"/>
+                                <rect key="frame" x="0.0" y="65" width="320" height="436"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="4yo-Sk-dP7" appends="YES" id="niB-xN-2cA"/>
                                 </connections>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ya-8W-9eL">
-                                <rect key="frame" x="160.5" y="588" width="54" height="30"/>
-                                <state key="normal" title="Mostrar"/>
-                                <connections>
-                                    <action selector="mostrarButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="GVU-MX-rlB"/>
-                                </connections>
-                            </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vp0-7X-MOH">
-                                <rect key="frame" x="16" y="588" width="51" height="31"/>
+                                <rect key="frame" x="57" y="503" width="44" height="31"/>
                                 <connections>
                                     <action selector="switchTapped" destination="BYZ-38-t0r" eventType="valueChanged" id="OHK-8B-0vY"/>
                                 </connections>
                             </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apagar Rastreo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jxh-rD-AWu">
+                                <rect key="frame" x="22" y="539" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ya-8W-9eL">
+                                <rect key="frame" x="184" y="509" width="104" height="46"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <state key="normal" title="Pedir!"/>
+                                <connections>
+                                    <action selector="mostrarButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="GVU-MX-rlB"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.17760400789672209" green="0.76157558900523559" blue="0.48154156728204889" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Vp0-7X-MOH" firstAttribute="top" secondItem="NQG-zn-gSc" secondAttribute="bottom" constant="8" id="1Xp-Lu-55j"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="NQG-zn-gSc" secondAttribute="leading" id="T6g-xL-bhR"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="Vp0-7X-MOH" secondAttribute="leading" id="aPj-iA-y9o"/>
+                            <constraint firstItem="0ya-8W-9eL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="168" id="6cj-5K-qfM"/>
+                            <constraint firstItem="NQG-zn-gSc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6pM-np-bsB"/>
+                            <constraint firstItem="Jxh-rD-AWu" firstAttribute="top" secondItem="Vp0-7X-MOH" secondAttribute="bottom" constant="5" id="Efr-2Q-5GN"/>
+                            <constraint firstItem="Vp0-7X-MOH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="439" id="FqH-DR-1dJ"/>
+                            <constraint firstItem="NQG-zn-gSc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gud-it-CV1"/>
+                            <constraint firstItem="Jxh-rD-AWu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="475" id="VCc-dh-Tf2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Vp0-7X-MOH" secondAttribute="trailing" constant="205" id="VV0-QW-HoW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0ya-8W-9eL" secondAttribute="trailing" constant="16" id="aaW-Rd-HFO"/>
+                            <constraint firstItem="Vp0-7X-MOH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="41" id="amY-in-UDN"/>
+                            <constraint firstItem="Jxh-rD-AWu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="6" id="ebv-Aw-DDS"/>
+                            <constraint firstItem="Vp0-7X-MOH" firstAttribute="top" secondItem="NQG-zn-gSc" secondAttribute="bottom" constant="2" id="gRG-yA-NXS"/>
                             <constraint firstItem="NQG-zn-gSc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="1" id="hba-1B-JXt"/>
-                            <constraint firstItem="0ya-8W-9eL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jI1-5N-uAy"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NQG-zn-gSc" secondAttribute="bottom" constant="87" id="kpw-wu-qtF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="NQG-zn-gSc" secondAttribute="trailing" id="vG7-kX-F4a"/>
-                            <constraint firstItem="0ya-8W-9eL" firstAttribute="top" secondItem="NQG-zn-gSc" secondAttribute="bottom" constant="8" id="vrN-s8-okx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0ya-8W-9eL" secondAttribute="bottom" constant="13" id="m9e-TB-fNM"/>
+                            <constraint firstItem="NQG-zn-gSc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nOm-Td-u6y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Jxh-rD-AWu" secondAttribute="trailing" constant="163" id="xIz-3S-WWM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Vp0-7X-MOH" secondAttribute="bottom" constant="34" id="y5C-ZI-u05"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="MangoCar" id="Puh-2f-U8F"/>
@@ -69,7 +85,7 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="860" y="137.18140929535232"/>
+            <point key="canvasLocation" x="858" y="136"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="eg9-Sc-rwa">
@@ -80,14 +96,26 @@
                         <viewControllerLayoutGuide type="bottom" id="XjU-fD-5t0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="N31-dD-tFm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CarPidiendo.png" translatesAutoresizingMaskIntoConstraints="NO" id="D3h-Ol-grs">
+                                <rect key="frame" x="0.0" y="32" width="320" height="536"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="nYM-TQ-R0s">
+                                <rect key="frame" x="143" y="140" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" red="0.55141434594835526" green="1" blue="0.082853671845008581" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="0.22291540942410171" blue="0.19451134861234198" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UDO-4t-Iqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="130"/>
+            <point key="canvasLocation" x="1747.5" y="129.92957746478874"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jX3-7a-Vqp">
@@ -108,4 +136,7 @@
             <point key="canvasLocation" x="36" y="137"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="CarPidiendo.png" width="640" height="1136"/>
+    </resources>
 </document>
